--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <div class="chat-messages" id="chatMessages">
             <div class="message ai">
                 <div class="message-content">
-                    Hello! I'm your AI assistant. How can I help you today?
+                    Hello! I'm your AI assistantsss. How can I help you today?
                 </div>
             </div>
         </div>
